# archmap

./: .gitignore  LICENSE  README.md  archmap.spec  pyinstaller_entry.py  pyproject.toml
.github/workflows/: publish-pypi.yml  release-binaries.yml
src/archmap/: __init__.py  analyzer.py  cli.py  layers.py  model.py  renderer.py  scanner.py
src/archmap/languages/: __init__.py  base.py  generic.py  python_analyzer.py
src/archmap/templates/: template.html
tests/: test_archmap.py
