[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "archmap-cli"
dynamic = ["version"]
description = "Generate a single self-contained architecture-map HTML from a project's source code."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "archmap" }]
keywords = ["architecture", "visualization", "static-analysis", "documentation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.scripts]
archmap = "archmap.cli:main"

[project.urls]
Homepage = "https://github.com/heiswayi/archmap"

[tool.setuptools.dynamic]
version = { attr = "archmap.__version__" }

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
archmap = ["templates/*.html"]
